# docusense-ai-azure

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy_endpoint.yml  evals.yml  index_and_train.yml  prompt_regression.yml  terraform.yml
aml/components/: evaluate.yml  index_documents.yml  train_classifier.yml
aml/datastores/: raw_blob.yml
aml/endpoints/: online_deployment.yml  online_endpoint.yml
aml/environments/: scoring_env.yml  training_env.yml
aml/pipelines/: indexing_pipeline.yml  training_pipeline.yml
data/: golden_extractions.jsonl  golden_intents.jsonl  judge_baseline.json  judge_prompts.jsonl
data/sample_contracts/: msa-01.txt  msa-02.txt  nda-01.txt  nda-02.txt  other-01.txt  po-01.txt  po-02.txt  price-01.txt  price-02.txt  rfp-01.txt  rfp-02.txt  term-01.txt  term-02.txt
docs/: DEMO.md
frontend/: index.html
infra/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/envs/: dev.tfvars  prod.tfvars
infra/modules/ai_search/: main.tf
infra/modules/aml_workspace/: main.tf
infra/modules/content_safety/: main.tf
infra/modules/keyvault/: main.tf
infra/modules/monitoring/: main.tf
infra/modules/openai/: main.tf
infra/modules/storage/: main.tf
notebooks/: 01_prompt_iteration.ipynb  02_retrieval_quality.ipynb
scripts/: build_index.py  deploy_endpoint.py  generate_sample_corpus.py  run_evals.py  run_prompt_regression.py  sample_traces.py  smoke_endpoint.py  submit_training_job.py
src/docusense/: __init__.py  config.py
src/docusense/classifier/: embeddings.py  head.py  train.py
src/docusense/evals/: datasets.py  deterministic.py  llm_judge.py  report.py
src/docusense/guardrails/: pii.py  (+2 more)
tests/: conftest.py
tests/evals/: test_intent_accuracy_regression.py  test_reasoning_judge_regression.py
tests/integration/: test_end_to_end_local.py
tests/unit/: test_chunking.py  test_citations_guardrail.py  test_classifier_head.py  test_cost.py  test_embeddings.py  test_pii_scrub.py  test_prompts.py  test_reasoning_pipeline.py  test_retrieval.py  test_safety_guardrail.py  test_schemas.py  test_serving_routes.py  test_structured_output.py  test_tool_calling.py
(+25 files in other folders)
