[project]
name = "docusense"
version = "0.1.0"
description = "Document intent classifier + LLM reasoning on Azure OpenAI and Azure AI Search."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "mlflow>=2.11,<3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "httpx>=0.27",
    "tenacity>=8.2",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "jinja2>=3.1",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
azure = [
    "azure-ai-ml>=1.15",
    "azure-identity>=1.16",
    "azure-storage-blob>=12.19",
    "azure-search-documents>=11.5.1",
    "openai>=1.30",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "azure-ai-contentsafety>=1.0",
    "azure-monitor-opentelemetry>=1.4",
]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docusense"]

[tool.hatch.build.targets.wheel.force-include]
"src/docusense/llm/prompts" = "docusense/llm/prompts"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "UP", "SIM", "C4", "N",
]
ignore = [
    "E501",  # line-length handled by formatter
    "B008",  # FastAPI / Typer idiom
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]
"notebooks/**" = ["E402", "F401", "SIM115"]
"src/docusense/schemas/classification.py" = ["UP042"]
"src/docusense/guardrails/citations.py" = ["N818"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: slower tests exercising multiple components",
    "evals: eval-suite regression tests",
]
